--- a/work/css/style.css
+++ b/work/css/style.css
@@ -92,7 +92,7 @@ a:hover, a:focus {
   padding-bottom: 30px;
   width: 100%;
   z-index: 12;
-  position: relative;
+  position: absolute;
   background: #f2f3f7; 
   top: 0;
 }
