--- a/css/style.css
+++ b/css/style.css
@@ -985,7 +985,7 @@ body.offcanvas {
       -webkit-transform: translate3d(0, -15px, 0);
       transform: translate3d(0, -15px, 0);
       margin-bottom: 15px; }
-      .project .desc h1 a {
+      .project .desc h1{
         color: #fff; }
     .project .desc span {
       display: block;
