--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ body.offcanvas {
     color: #000;
     text-transform: uppercase;
     letter-spacing: 1px;
-    bordeR: 1px solid #000;
+    border: 1px solid #000;
     padding: 2px 10px; }
 
 .fancy-collapse-panel .panel-default > .panel-heading {
