--- a/css/style.css
+++ b/css/style.css
@@ -947,6 +947,8 @@ body.offcanvas {
     -o-transition: 0.3s;
     transition: 0.3s; }
     .project .desc .con {
+      text-align: center;
+      top:30%;
       padding: 20px;
       display: block;
       position: relative;
@@ -989,7 +991,8 @@ body.offcanvas {
     .project .desc span {
       display: block;
       color: rgba(255, 255, 255, 0.7);
-      font-size: 20px;
+      font-weight: bold;
+      font-size: 18px;
       -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
       -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
       transition: opacity 0.3s, -webkit-transform 0.3s;
