--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,20 @@
 *	Edit this section
 *
 * ======================================================= */
+.js div#preloader { 
+  position: fixed; 
+  left: 0; top: 0; 
+  z-index: 999; 
+  width: 100%; 
+  height: 100%; 
+  overflow: visible; 
+  background: #333 url('images/preloader.gif') no-repeat center center;
+
+  }
+
+
+
+
 body {
   font-family: "Quicksand", Arial, sans-serif;
   font-weight: 400;
