--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,18 @@
 * ======================================================= */
 
 
+.loader {
+
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  padding-top: 25%;
+  z-index: 10000;
+  background-color: #fff;
+  text-align: center;
+  margin: auto;
+
+}
 
 body {
   font-family: "Quicksand", Arial, sans-serif;
