--- a/work/css/SoCool.css
+++ b/work/css/SoCool.css
@@ -629,6 +629,26 @@ header.dark nav ul li a:hover{
 
 }
 
+.afterword {
+
+    display: block;
+    height: 500px;
+    width: 100%;
+    background-color: rgb(248,248,249);
+
+}
+
+
+.afterword img {
+
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;   
+    margin-left:23%;
+}
+
+
 
 /*    footer    */
 footer{
