--- a/work/css/vote.css
+++ b/work/css/vote.css
@@ -288,9 +288,6 @@ header.dark nav ul li a:hover{
     text-align: center;
 }
 
-.intro ul li:first-child{
-    margin-left: 10%;
-}
 
 
 .intro ul li h2{
@@ -312,305 +309,52 @@ header.dark nav ul li a:hover{
 }
 
 
-.demo1 {
+embed {
 
-    display: block;
-    width: 100%;
-    height: 400px;
-    text-align: center;
-    margin-top: 6%;
-    background-color: #f2f3f7;    
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-  
-
-}
-
-#mac {
- 
-    margin-top: 3.5%; 
-
-}
-
-
-.challenge {
-
-    display: block;
-    width: 100%;
-    height: 700px;
-    background-color: #ffffff;    
-
-}
-
-
-
-.challenge h2{
-
-    margin-top: 3%;
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-}
-
-.challenge p{
-
-    color: #838181;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    line-height: 28px; 
-    margin-top: 2%;
-    margin-right: 23%;
-    margin-left: 23%;
-    letter-spacing: .5px;
-
-}
-
-.challenge img {
-
-
-    display: block;
-    width: 150px;
-    height: 200px;
-    float: left;
-    margin-left: 15%;
     margin-top: 5%;
-    
-
+    margin-left:-15%; 
 }
 
-.challenge span {
-
-    color: #838181;
-    width:300px;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    line-height: 28px; 
-    margin-top: 20%;
-    margin-left: -16%; 
-    margin-bottom: 5%; 
-    float: left;
-
-
-}
-
-
-.table {
-
-    margin-top: 3%;
-    display: block;
-    height: 810px;
-    width: 100%;
-    background-color: #f2f3f7;    
-
-}
-
-
-.table h2 {
-
-    padding-top: 3%;
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    padding-bottom: 1%;
-
-}
-
-.table span {
-
-  
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    text-align: center;
-    margin-left: 11%;
-
-   
-}
-
-.table img {
-
-    width: 65%;
-    height: 65%;
-    margin-top:2.5%;
-    margin-left: 18%;
-
-}
-
-
-
-.value {
-
-    display: block;
-    width: 100%;
-    height: 710px;
-    background-color: #ffffff;  
-
-}
-
-.value h2 {
-
-    padding-top: 3%;
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    padding-bottom: 1%;
-}
-
-.value span {
-
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    text-align: left;
-    margin-left: 20%;
-
-
-}
-
-.value img {
-
-    display: block;
-    width: 150px;
-    height: 200px;
-    float: left;
-    margin-top: 7%;
-    margin-left: 15%;
-}
-
-.value p {
-
-    color: #616161;
-    width: 300px;
-    font-family: "raleway-regular";
-    font-size: 20px;
-    line-height: 28px;
-    text-align: left;  
-    float: left;
-    margin-top: 21%;
-    margin-left: -16%;
-
-}
-
-
-.solution {
-
-    display: block;
-    width: 100%;
-    height: 1900px;
-    background-color: rgba(140, 114, 114, 0.17);  
-
-}
-
-.solution h2 {
-
-    padding-top: 3%;
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-
-
-}
-
-.solution #q {
-    
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    font-weight: bold;
-    margin-left: 22%;
-    margin-top: 3%;
-
-}
-
-.solution #s1 {
-
+.myButton {
+    -moz-box-shadow: 0px 10px 14px -7px #1c1b18;
+    -webkit-box-shadow: 0px 10px 14px -7px #1c1b18;
+    box-shadow: 0px 10px 14px -7px #1c1b18;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #eae0c2), color-stop(1, #ccc2a6));
+    background:-moz-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+    background:-webkit-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+    background:-o-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+    background:-ms-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+    background:linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#eae0c2', endColorstr='#ccc2a6',GradientType=0);
+    background-color:#eae0c2;
+    -moz-border-radius:8px;
+    -webkit-border-radius:8px;
+    border-radius:8px;
     display:inline-block;
-    width: 750px;
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    line-height: 30px;
-    text-align: left;
-    margin-top: 3%;
-    margin-left: 22.3%;
-
-
+    cursor:pointer;
+    color:#505739;
+    font-family:Arial;
+    font-size:22px;
+    padding:13px 32px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #ffffff;
 }
-
-.solution #s2 {
-    float: left;
-    display:inline-block;
-    width: 400px;
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    line-height: 30px;
-    text-align: left;
-    margin-top: 20%;
-    margin-left: 7%;
-
+.myButton:hover {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ccc2a6), color-stop(1, #eae0c2));
+    background:-moz-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+    background:-webkit-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+    background:-o-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+    background:-ms-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+    background:linear-gradient(to bottom, #ccc2a6 5%, #eae0c2 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ccc2a6', endColorstr='#eae0c2',GradientType=0);
+    background-color:#ccc2a6;
+}
+.myButton:active {
+    position:relative;
+    top:1px;
 }
 
 
-.solution #s3 {
-
-    float: right;
-    display:inline-block;
-    width: 400px;
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    line-height: 30px;
-    text-align: left;
-    margin-right: 10%;
-    margin-top:-47.5%;
-}
-
-   
-.evaluation {
-
-
-    display: block;
-    height: 800px;
-    width: 100%;
-    background-color: #ffffff;  
-
-}
-
-.evaluation h2 {
-
-    padding-top: 3%;
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-
-
-}
-    
-.evaluation span {
-
-    display: inline-block;
-    width: 1000px;
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    line-height: 28px;
-    text-align: left;
-    margin-left: 15%;
-
-}
 
 
 /*    footer    */
