--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -281,7 +281,6 @@ header.dark nav ul li a:hover{
 
 
 
-
 .intro {
   
     width: 100%;
@@ -338,7 +337,7 @@ header.dark nav ul li a:hover{
     font-weight: bold;
     padding-top: 8%;
     text-align: left;
-    margin-left: 10%;
+    margin-left: 17%;
 }
 
 
@@ -355,7 +354,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 1000px;
+    height: 1100px;
     background-color: #ffffff;    
 
 }
@@ -368,7 +367,7 @@ header.dark nav ul li a:hover{
     font-weight: bold;
     padding-top: 8%;
     text-align: left;
-    margin-left: 10%;
+    margin-left: 17%;
 
 }
 
@@ -379,8 +378,8 @@ header.dark nav ul li a:hover{
     font-size: 16px;
     line-height: 28px; 
     letter-spacing: .5px;
-    margin-left: 10%;
-    width: 1200px;
+    margin-left: 17%;
+    width: 1000px;
     margin-top: 3%;
 
 
@@ -391,8 +390,62 @@ header.dark nav ul li a:hover{
     width: 30%;
     margin-top: 3%;
     margin-left:35%;
+    margin-bottom: -3%;
 
 }
+
+
+.research {
+
+    display: block;
+    width: 100%;
+    height: 1000px;
+    background-color: #ffffff;
+
+}
+
+.research h1{
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: center;
+  
+
+}
+
+
+.research h2 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 25px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 17%;
+
+
+}
+
+
+.research span {
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 17%;
+    width: 1000px;
+    margin-top: 3%;
+}
+
+
+
+
 
 
 
@@ -400,7 +453,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 700px;
+    height: 300px;
     background-color: #ffffff;    
 
 }
@@ -409,7 +462,7 @@ header.dark nav ul li a:hover{
 
 .challenge h2{
 
-    margin-top: 3%;
+    margin-top: 10%;
     color: #616161;
     font-family: "raleway-bold";
     font-size: 30px;
@@ -693,6 +746,7 @@ footer .rights p{
     font-family: "raleway-regular";
     font-size: 13px;
     margin: auto; 
+    text-align: right;
 }
 
 footer .rights p a{
