--- a/work/css/reset.css
+++ b/work/css/reset.css
@@ -90,8 +90,10 @@
         height:1px;
         border:0;   
         border-top:1px solid #cccccc;
-        margin:1em 0;
+        margin-top: 3%;
+        margin-left: 15%;
         padding:0;
+        width: 1000px;
     }
 
     input, select {
