--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -399,7 +399,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 1000px;
+    height: 1500px;
     background-color: #ffffff;
 
 }
@@ -441,6 +441,60 @@ header.dark nav ul li a:hover{
     margin-left: 17%;
     width: 1000px;
     margin-top: 3%;
+}
+
+.research img {
+
+    display: block;
+    width: 120px;
+    height: 200px;
+    float: left;
+    margin-left: 18%;
+    
+
+
+}
+
+.research #d1 {
+
+	color: #838181;
+    width: 220px;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px;
+    float: left;
+    margin-left: 17%;
+
+
+
+}
+
+.research #d2 {
+
+	color: #838181;
+    width: 220px;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px;
+    float: left;
+    margin-left: 11%;
+
+
+
+}
+
+.research #d3 {
+
+	color: #838181;
+    width: 220px;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px;
+    float: left;
+    margin-left: 12%;
+
+
+
 }
 
 
