--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -508,7 +508,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 3000px;
+    height: 1000px;
     background-color: #ffffff;    
 
 }
@@ -566,7 +566,62 @@ header.dark nav ul li a:hover{
 
 }
 
-.value img {
+
+.ideation {
+
+display: block;
+width: 100%;
+height: 2000px;
+background-color: #ffffff;    
+
+
+
+}
+
+.ideation h1 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: center;
+  
+
+
+}
+
+.ideation h2 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 25px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 17%;
+
+
+
+
+}
+
+.ideation span {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 17%;
+    width: 1000px;
+    margin-top: 3%;
+
+
+}
+
+.ideation img {
 
 	width: 60%;
 	margin-left:20%;
@@ -575,117 +630,6 @@ header.dark nav ul li a:hover{
 }
 
 
-.solution {
-
-    display: block;
-    width: 100%;
-    height: 1900px;
-    background-color: rgba(140, 114, 114, 0.17);  
-
-}
-
-.solution h2 {
-
-    padding-top: 3%;
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-
-
-}
-
-.solution #q {
-    
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    font-weight: bold;
-    margin-left: 22%;
-    margin-top: 3%;
-
-}
-
-.solution #s1 {
-
-    display:inline-block;
-    width: 750px;
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    line-height: 30px;
-    text-align: left;
-    margin-top: 3%;
-    margin-left: 22.3%;
-
-
-}
-
-.solution #s2 {
-    float: left;
-    display:inline-block;
-    width: 400px;
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    line-height: 30px;
-    text-align: left;
-    margin-top: 20%;
-    margin-left: 7%;
-
-}
-
-
-.solution #s3 {
-
-    float: right;
-    display:inline-block;
-    width: 400px;
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    line-height: 30px;
-    text-align: left;
-    margin-right: 10%;
-    margin-top:-47.5%;
-}
-
-   
-.evaluation {
-
-
-    display: block;
-    height: 800px;
-    width: 100%;
-    background-color: #ffffff;  
-
-}
-
-.evaluation h2 {
-
-    padding-top: 3%;
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-
-
-}
-    
-.evaluation span {
-
-    display: inline-block;
-    width: 1000px;
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 18px;
-    line-height: 28px;
-    text-align: left;
-    margin-left: 15%;
-
-}
 
 
 /*    footer    */
