--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -728,7 +728,7 @@ background-color: #ffffff;
 
 display: block;
 width: 100%;
-height: 600px;
+height: 700px;
 background-color: #ffffff;
 
 
@@ -759,7 +759,7 @@ background-color: #ffffff;
     letter-spacing: .5px;
     margin-left: 17%;
     width: 500px;
-    margin-top: 5%;
+    margin-top: 3%;
     float: left;
 
 
@@ -772,10 +772,56 @@ background-color: #ffffff;
     float: left;
     width:30%;
     margin-left: 3%;
-    margin-top:3%;
+    margin-top:5%;
 
 
 }
+
+
+.pt {
+
+    display: block;
+    width: 100%;
+    height: 1300px;
+    
+
+
+}
+
+.pt h1 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: center;
+
+
+}
+
+
+.pt h2 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 25px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 17%;
+
+}
+
+.pt iframe {
+
+    margin-left: 18%;
+    margin-top: 3%;
+
+
+}
+
+
 
 
 /*    footer    */
