--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -878,6 +878,58 @@ background-color: #ffffff;
 
 }
 
+.reflection {
+
+    display: block;
+    width: 100%;
+    height: 350px;
+    background-color: #ffffff;
+
+}
+
+.reflection h1 {
+
+   color: #616161;
+    font-family: "raleway-bold";
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: center;
+
+}
+
+.reflection p {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 18px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 17%;
+    width: 1000px;
+    margin-top: 3%;
+    text-align: center;
+    font-style: italic;
+
+
+
+}
+
+.reflection span {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 17%;
+    width: 1000px;
+    margin-top: 3%;
+    float: left;
+
+}
 
 
 /*    footer    */
