--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -1,24 +1,4 @@
-/*
 
-	Template Author : pixelhint.com
-	Author Email    : contact@pixelhint.com
-	Template Name   : Sublime
-	
-	
-	*****************************************
-	
-	
-    - fonts
-    - general css
-    - billboard
-    - header
-    - services
-    - video
-    - testimonials
-    - blog posts
-	- footer
-	
-*/
 
 
 
@@ -395,7 +375,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 1200px;
+    height: 1600px;
     background-color: #ffffff;    
 
 }
@@ -423,6 +403,20 @@ header.dark nav ul li a:hover{
     width: 1000px;
     margin-top: 3%;
 
+}
+
+.background p {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 18px;
+    line-height: 45px; 
+    letter-spacing: .5px;
+    margin-left: 17%;
+    margin-top: 3%;
+    font-weight: bold;
+    font-style: italic;
 
 }
 
@@ -440,7 +434,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 1800px;
+    height: 2400px;
     background-color: #ffffff;
 
 }
@@ -485,7 +479,9 @@ header.dark nav ul li a:hover{
     margin-top: 3%;
 }
 
-.research img {
+
+
+.icon {
 
     display: block;
     width: 120px;
@@ -493,7 +489,6 @@ header.dark nav ul li a:hover{
     float: left;
     margin-left: 18%;
     
-
 
 }
 
