--- a/work/css/SoCool.css
+++ b/work/css/SoCool.css
@@ -1,24 +1,4 @@
-/*
 
-	Template Author : pixelhint.com
-	Author Email    : contact@pixelhint.com
-	Template Name   : Sublime
-	
-	
-	*****************************************
-	
-	
-    - fonts
-    - general css
-    - billboard
-    - header
-    - services
-    - video
-    - testimonials
-    - blog posts
-	- footer
-	
-*/
 
 
 
@@ -253,6 +233,7 @@ header{
 
 header .logo{
     float: left;
+    margin-left: -15%;
     
 }
 
