--- a/work/css/Collection.css
+++ b/work/css/Collection.css
@@ -1,25 +1,3 @@
-/*
-
-	Template Author : pixelhint.com
-	Author Email    : contact@pixelhint.com
-	Template Name   : Sublime
-	
-	
-	*****************************************
-	
-	
-    - fonts
-    - general css
-    - billboard
-    - header
-    - services
-    - video
-    - testimonials
-    - blog posts
-	- footer
-	
-*/
-
 
 
 /*  Fonts  */
@@ -243,6 +221,7 @@ header{
 
 header .logo{
     float: left;
+    margin-left: -15%;
     
 }
 
