--- a/work/css/SoCool.css
+++ b/work/css/SoCool.css
@@ -529,9 +529,9 @@ header.dark nav ul li a:hover{
     color: #616161;
     width: 300px;
     font-family: "raleway-regular";
-    font-size: 20px;
+    font-size: 18px;
     line-height: 28px;
-    text-align: left;  
+    text-align: center;  
     float: left;
     margin-top: 21%;
     margin-left: -16%;
@@ -651,22 +651,61 @@ header.dark nav ul li a:hover{
 
 }
 
+
+
 .afterword {
 
     display: block;
-    height: 500px;
+    height: 813px;
     width: 100%;
     background-color: rgb(248,248,249);
 
 }
 
 
+.afterword h2 {
+
+    padding-top: 3%;
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+
+
+
+}
+
+.afterword h3 {
+
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 20px;
+    font-style: italic;
+    text-align: center;
+
+
+}
+
+
+.afterword span {
+
+    display: inline-block;
+    width: 1000px;
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 18px;
+    line-height: 28px;
+    text-align: left;
+    margin-left: 15%;
+
+}
+
 .afterword img {
 
-    width: auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;   
+
+    margin-top: 3%;
+    width: 50%;  
     margin-left:23%;
 }
 
