--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -435,7 +435,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 2400px;
+    height: 2500px;
     background-color: #ffffff;
 
 }
@@ -679,8 +679,23 @@ background-color: #ffffff;
 
 display: block;
 width: 100%;
-height: 800px;
+height: 1800px;
 background-color: #ffffff;    
+
+
+
+}
+
+.brainstormconclusion h2 {
+
+     color: #616161;
+    font-family: "raleway-bold";
+    font-size: 25px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 17%;
+
 
 
 
@@ -700,6 +715,23 @@ background-color: #ffffff;
     margin-top: 3%;
 
 }
+
+.brainstormconclusion p {
+
+    display: block;
+    color: #000000;
+    font-family: "raleway-bold";
+    font-size: 16px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 17%;
+    width: 1000px;
+    margin-top: 3%;  
+
+
+
+}
+
 
 .wp {
 
@@ -928,6 +960,8 @@ background-color: #ffffff;
     float: left;
 
 }
+
+
 
 
 /*    footer    */
