--- a/work/css/SoCool.css
+++ b/work/css/SoCool.css
@@ -234,6 +234,7 @@ header{
 header .logo{
     float: left;
     margin-left: -15%;
+    width:12%;
     
 }
 
@@ -740,3 +741,692 @@ footer .rights p a{
     font-weight: bold;
     text-decoration: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:650px){
+
+
+body{
+    background: #fff;
+}
+
+.wrapper{
+    width: 375px;
+    margin: 0 auto;
+}
+
+h1, h2, h3, h4, h5 ,h6{
+    color: #626262;
+    font-family: "raleway-regular", arial;
+    letter-spacing: 1px;
+}
+
+h1              { font-size: 2em; margin: .67em 0 }
+h2              { font-size: 1.5em; margin: .75em 0 }
+h3              { font-size: 1.17em; margin: .83em 0 }
+h5              { font-size: .83em; margin: 1.5em 0 }
+h6              { font-size: .75em; margin: 1.67em 0 }
+h1, h2, h3, h4,
+h5, h6          { font-weight: bolder }
+
+.clearfix:before,  
+.clearfix:after {  
+    content: " ";  
+    display: table;  
+}  
+.clearfix:after {  
+    clear: both;  
+}  
+ 
+.clearfix {  
+    *zoom: 1;  
+}
+
+
+
+
+
+
+
+/*    Billboard    */
+.billboard{
+    width: 100%;
+    height: 300px;
+    position: relative;
+}
+
+.billboard.light{
+    background: url('../img/billboard.jpg') no-repeat;   
+     
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.billboard.dark{
+    background: url('../img/billboard2.jpg') no-repeat;
+    
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+
+.billboard .shadow{
+    position: absolute;
+    width: 100%;
+    height: 142px;
+    bottom: 0;
+    left: 0;
+    margin-bottom: -1px;
+    background: url('../img/shadow.png') repeat-x;
+}
+
+.billboard .caption{
+    margin-top: -40px;
+    text-align: center;
+}
+
+.billboard .caption.light{
+    color: #fff;
+}
+
+.billboard .caption.dark{
+    color: #5d5d5d;
+}
+
+.billboard .caption h1{
+    font-family: "raleway-bold";
+    font-size: 30px;
+    font-weight: bold; 
+    margin-bottom: 30px;
+}
+
+.billboard .caption.light h1{
+    color: #fff;
+}
+
+.billboard .caption.dark h1{
+    color: #5d5d5d;
+}
+
+.billboard .caption p{
+    font-family: "raleway-regular";
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.billboard .caption.light p{
+    color: #fff;
+}
+
+.billboard .caption.dark p{
+    color: #5d5d5d;
+}
+
+.billboard .caption hr{
+    display: inline-block;
+    height: 1px;
+    width: 30px;
+    border: 0!important;   
+    margin: 0;
+    padding: 0;
+}
+
+.billboard .caption.light hr{
+    background: #fff;
+}
+
+.billboard .caption.dark hr{
+    background: #5d5d5d;
+}
+
+
+
+
+
+
+/*    header    */
+header{
+    width: 100%;
+    height: 125px;
+}
+
+header .logo{
+    float: left;
+    width: 25%;
+    margin-left: -15px;
+    margin-bottom: 5%;
+    
+    
+}
+
+header nav{
+    float: right;
+    margin-top: 57px;
+}
+
+
+header nav ul li{
+    list-style: none;
+    display: block;
+    float: left;
+    margin-left: 50px;
+}
+
+header nav ul li a{
+    text-decoration: none;  
+    font-family: "raleway-regular";
+    font-size: 14px;
+
+    transition:all .2s linear;
+    -webkit-transition:all .2s linear;
+    -moz-transition:all .2s linear;
+    -o-transition:all .2s linear;
+}
+
+header.light nav ul li a{  
+    color: #fff;
+}
+
+header.light nav ul li a:hover{
+    color: #B9B9B9;
+}
+
+header.dark nav ul li a{  
+    color: #5d5d5d;
+}
+
+header.dark nav ul li a:hover{
+    color: #919191;
+}
+
+
+.overview {
+
+    display: block;
+    width: 100%;
+    height: 220px;
+    text-align: center;
+    background-color: #fff; 
+
+    
+}
+
+.overview h2{
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 3%;
+   
+}
+
+.overview  p{
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+}
+
+
+
+
+
+/*    Services    */
+
+.intro {
+  
+    width: 100%;
+  
+}
+
+.intro ul li{
+    list-style: none;
+    display: block;
+    width: 300px;
+    float: left;
+    margin-left: 15%;
+    text-align: center;
+}
+
+.intro ul li:first-child{
+    margin-left: 15%;
+}
+
+
+.intro ul li h2{
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 3%;
+}
+
+.intro ul li p{
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    margin-top: 10%;
+    letter-spacing: .5px;
+
+}
+
+
+.demo1 {
+
+    display: block;
+    width: 100%;
+    height: 120px;
+    text-align: center;
+    margin-top: 6%;
+    background-color: #f2f3f7;    
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+  
+
+}
+
+#mac {
+ 
+    margin-top: 3.5%; 
+
+}
+
+
+.challenge {
+
+    display: block;
+    width: 100%;
+    height: 1050px;
+    background-color: #ffffff;    
+
+}
+
+
+
+.challenge h2{
+
+    margin-top: 3%;
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.challenge p{
+
+    display: block;
+    width: 280px;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    margin-top: 2%;
+    letter-spacing: .5px;
+
+}
+
+.challenge img {
+
+
+    display: block;
+    width: 75px;
+    height: 100px;
+    float: left;
+    margin-left: 15%;
+    margin-top: 5%;
+    
+
+}
+
+.challenge span {
+
+    color: #838181;
+    width:300px;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    margin-top: 28%;
+    margin-left: -16%; 
+    margin-bottom: 5%; 
+    float: left;
+
+
+}
+
+
+.table {
+
+    margin-top: 3%;
+    display: block;
+    height: 400px;
+    width: 100%;
+    background-color: #f2f3f7;    
+
+}
+
+
+.table h2 {
+
+    padding-top: 3%;
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 1%;
+
+}
+
+.table span {
+
+    display: block;
+    width: 300px;  
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    text-align: center;
+    margin-left: 11%;
+
+   
+}
+
+.table img {
+
+    width: 95%;
+    height:95%;
+    margin-top:5%;
+    margin-left: 2%;
+    
+
+}
+
+
+
+.value {
+
+    display: block;
+    width: 100%;
+    height: 650px;
+    background-color: #ffffff;  
+
+}
+
+.value h2 {
+
+    padding-top: 3%;
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 1%;
+}
+
+.value span {
+
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    text-align: left;
+    margin-left: 20%;
+
+
+}
+
+.value img {
+
+    display: block;
+    width: 75px;
+    height: 100px;
+    float: left;
+    margin-top: 7%;
+    margin-left: 15%;
+}
+
+.value p {
+
+    color: #616161;
+    width: 300px;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px;
+    text-align: center;  
+    float: left;
+    margin-top: 23%;
+    margin-left: -20%;
+
+}
+
+
+.solution {
+
+    display: block;
+    width: 100%;
+    height: 1200px;
+    background-color: rgba(140, 114, 114, 0.17);  
+
+}
+
+.solution h2 {
+
+    padding-top: 3%;
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+
+
+}
+
+.solution #q {
+    
+    display: block;
+    width: 300px;
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 15%;
+    margin-top: 3%;
+
+}
+
+.solution #s1 {
+
+    display:inline-block;
+    width: 300px;
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 30px;
+    text-align: left;
+    margin-top: 7%;
+    margin-left: 22.3%;
+
+
+}
+
+.solution #s2 {
+    float: left;
+    display:inline-block;
+    width: 300px;
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 30px;
+    text-align: left;
+    margin-top: 105%;
+   
+
+}
+
+
+.solution #s3 {
+
+    float: right;
+    display:inline-block;
+    width: 300px;
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 30px;
+    text-align: left;
+    margin-right: 6%;
+    margin-top:15%;
+}
+
+   
+.evaluation {
+
+
+    display: block;
+    height: 1000px;
+    width: 100%;
+    background-color: #ffffff;  
+
+}
+
+.evaluation h2 {
+
+    padding-top: 3%;
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+
+
+}
+    
+.evaluation span {
+
+    display: inline-block;
+    width: 300px;
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px;
+    text-align: left;
+    margin-left: 15%;
+
+}
+
+
+
+.afterword {
+
+    display: block;
+    height: 500px;
+    width: 100%;
+    background-color: rgb(248,248,249);
+
+}
+
+
+.afterword h2 {
+
+    padding-top: 3%;
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+
+
+
+}
+
+.afterword h3 {
+
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 18px;
+    font-style: italic;
+    text-align: center;
+
+
+}
+
+
+.afterword span {
+
+    display: inline-block;
+    width: 300px;
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px;
+    text-align: left;
+    margin-left: 15%;
+
+}
+
+.afterword img {
+
+
+    margin-top: 3%;
+    width: 50%;  
+    margin-left:23%;
+}
+
+
+
+/*    footer    */
+footer{
+    display: block;
+    padding: 35px 0;
+    overflow: hidden;
+    
+}
+
+footer .footer_logo{
+    float: left;
+
+}
+
+footer .rights p{
+   
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 13px;
+    margin: auto; 
+    text-align: right;
+}
+
+footer .rights p a{
+    color: #777;
+    font-family: "raleway-semibold";
+    font-size: 13px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+
+
+}
+
