--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -223,6 +223,7 @@ header{
 header .logo{
     float:left;
     margin-left: -15%;
+    width: 12%;
     
 }
 
@@ -597,7 +598,7 @@ header.dark nav ul li a:hover{
     font-size: 16px;
     line-height: 28px;
     margin-left: 17%;
-    margin-top: 2%;
+    margin-top: 3%;
     margin-bottom: 8%;
 
 
@@ -993,3 +994,990 @@ footer .rights p a{
     font-weight: bold;
     text-decoration: none;
 }
+
+
+
+
+
+
+@media screen and (max-width:650px){
+
+
+    body{
+    background: #fff;
+}
+
+.wrapper{
+    width: 375px;
+    margin: 0 auto;
+}
+
+h1, h2, h3, h4, h5 ,h6{
+    color: #626262;
+    font-family: "raleway-regular", arial;
+    letter-spacing: 1px;
+}
+
+h1              { font-size: 2em; margin: .67em 0 }
+h2              { font-size: 1.5em; margin: .75em 0 }
+h3              { font-size: 1.17em; margin: .83em 0 }
+h5              { font-size: .83em; margin: 1.5em 0 }
+h6              { font-size: .75em; margin: 1.67em 0 }
+h1, h2, h3, h4,
+h5, h6          { font-weight: bolder }
+
+.clearfix:before,  
+.clearfix:after {  
+    content: " ";  
+    display: table;  
+}  
+.clearfix:after {  
+    clear: both;  
+}  
+ 
+.clearfix {  
+    *zoom: 1;  
+}
+
+
+.focus-in-contract-bck {
+    -webkit-animation: focus-in-contract-bck 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.6s both;
+            animation: focus-in-contract-bck 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.6s both;
+}
+
+@-webkit-keyframes focus-in-contract-bck {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(300px);
+            transform: translateZ(300px);
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(12px);
+            transform: translateZ(12px);
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
+}
+@keyframes focus-in-contract-bck {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(300px);
+            transform: translateZ(300px);
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(12px);
+            transform: translateZ(12px);
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
+}
+
+hr {
+
+width: 350px;
+margin-left: 30px;
+
+}
+
+
+
+
+/*    Billboard    */
+.billboard{
+    width: 100%;
+    height: 300px;
+    position: relative;
+}
+
+.billboard.light{
+    background: url('../img/billboard.jpg') no-repeat;   
+     
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.billboard.dark{
+    background: url('../img/farm.jpg') no-repeat;
+    
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+
+
+.billboard .caption{
+    margin-top: -40px;
+    text-align: center;
+}
+
+.billboard .caption.light{
+    color: #fff;
+}
+
+.billboard .caption.dark{
+    color: #5d5d5d;
+}
+
+.billboard .caption h1{
+    font-family: "raleway-bold";
+    font-size: 30px;
+    font-weight: bold; 
+    margin-bottom: 30px;
+}
+
+.billboard .caption.light h1{
+    color: #fff;
+}
+
+.billboard .caption.dark h1{
+    color: #5d5d5d;
+}
+
+.billboard .caption p{
+    font-family: "raleway-regular";
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.billboard .caption.light p{
+    color: #fff;
+}
+
+.billboard .caption.dark p{
+    color: #5d5d5d;
+}
+
+.billboard .caption hr{
+    display: inline-block;
+    height: 1px;
+    width: 30px;
+    border: 0!important;   
+    margin: 0;
+    padding: 0;
+}
+
+.billboard .caption.light hr{
+    background: #fff;
+}
+
+.billboard .caption.dark hr{
+    background: #5d5d5d;
+}
+
+
+
+
+
+/*    header    */
+header{
+    width: 100%;
+    height: 125px;
+}
+
+header .logo{
+    float:left;
+    margin-left: -15px;
+    width: 25%;
+    margin-bottom: 5%;
+    
+}
+
+header nav{
+    float: right;
+    margin-top: 57px;
+}
+
+
+header nav ul li{
+    list-style: none;
+    display: block;
+    float: left;
+    margin-left: 50px;
+}
+
+header nav ul li a{
+    text-decoration: none;  
+    font-family: "raleway-regular";
+    font-size: 14px;
+
+    transition:all .2s linear;
+    -webkit-transition:all .2s linear;
+    -moz-transition:all .2s linear;
+    -o-transition:all .2s linear;
+}
+
+header.light nav ul li a{  
+    color: #fff;
+}
+
+header.light nav ul li a:hover{
+    color: #B9B9B9;
+}
+
+header.dark nav ul li a{  
+    color: #5d5d5d;
+}
+
+header.dark nav ul li a:hover{
+    color: #919191;
+}
+
+
+.overview {
+
+    display: block;
+    width: 100%;
+    height: 400px;
+    text-align: center;
+    background-color: #fff; 
+
+    
+}
+
+.overview h2{
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 3%;
+
+   
+}
+
+.overview  p{
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    width: 300px;
+    margin: auto;
+}
+
+
+
+
+
+.intro {
+  
+    width: 100%;
+  
+}
+
+.intro ul li{
+    list-style: none;
+    display: block;
+    width: 300px;
+    float: left;
+    margin-left: 9%;
+    text-align: center;
+}
+
+.intro ul li:first-child{
+    margin-left: 10%;
+}
+
+
+.intro ul li h2{
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 4%;
+}
+
+.intro ul li p{
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px; 
+    margin-top: 10%;
+    letter-spacing: .5px;
+    
+}
+
+
+.process {
+
+    display: block;
+    width: 100%;
+    height: 200px;
+    background-color: #ffffff; 
+
+}
+
+
+.process h2{
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 3%;
+}
+
+
+.process img {
+
+    margin-top: 5%;
+    margin-left: 0%;
+    width: 100%;
+
+}
+
+
+.background {
+
+    display: block;
+    width: 100%;
+    height: 1800px;
+    background-color: #ffffff;    
+
+}
+
+.background h2 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 3%;
+
+}
+
+.background span {
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 3%;
+    width: 350px;
+    margin-top: 3%;
+
+}
+
+.background p {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 15px;
+    line-height: 45px; 
+    letter-spacing: .5px;
+    margin-left: 3%;
+    margin-top: 3%;
+    font-weight: bold;
+    font-style: italic;
+
+}
+
+.background img {
+
+    width: 100%;
+    margin-top: 3%;
+    margin-left:0%;
+    margin-bottom: -3%;
+
+}
+
+
+.research {
+
+    display: block;
+    width: 100%;
+    height: 2000px;
+    background-color: #ffffff;
+
+}
+
+.research h1{
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: center;
+  
+
+}
+
+
+.research h2 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 18px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 3%;
+
+
+}
+
+
+.research span {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 3%;
+    width: 350px;
+    margin-top: 3%;
+}
+
+
+
+.icon {
+
+    display: none;
+    width: 90px;
+    height: 150px;
+    float: left;
+    margin-left: 30%;
+    
+
+}
+
+.research #d1 {
+
+    color: #838181;
+    width: 220px;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px;
+    float: left;
+    margin-left: 10%;
+    margin-top: 15px;
+
+
+
+}
+
+.research #d2 {
+
+    color: #838181;
+    width: 220px;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px;
+    float: left;
+    margin-left: 10%;
+    margin-top: 15px;
+
+
+
+}
+
+.research #d3 {
+
+    color: #838181;
+    width: 220px;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px;
+    float: left;
+    margin-left: 10%;
+    margin-top: 15px;
+
+
+
+}
+
+
+
+
+
+
+
+.value {
+
+    display: block;
+    width: 100%;
+    height: 1050px;
+    background-color: #ffffff;    
+
+}
+
+.value h2 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 1%;
+    text-align: left;
+    margin-left: 3%;
+   
+}
+
+
+.value span {
+    
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 3%;
+    width: 350px;
+    margin-top: 2%;
+}
+
+.t {
+
+    color: #000000;
+    width: 220px;
+    font-family: "raleway-bold";
+    font-size: 18px;
+    line-height: 28px;
+    margin-left: 3%;
+    margin-top: 2%;
+   
+
+}
+
+.c {
+
+    color: #838181;
+    width: 350px;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px;
+    margin-left: 3%;
+    margin-top: 2%;
+    margin-bottom: 8%;
+
+
+}
+
+
+.ideation {
+
+display: block;
+width: 100%;
+height: 1600px;
+background-color: #ffffff;    
+
+
+
+}
+
+.ideation h1 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: center;
+  
+
+
+}
+
+.ideation h2 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 18px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 3%;
+
+
+
+
+}
+
+.ideation span {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 3%;
+    width: 350px;
+    margin-top: 3%;
+
+
+}
+
+.persona {
+
+    width: 100%;
+    margin-left:0px;
+    margin-top: 6%;
+
+}
+
+.brainstorm {
+
+    display: block;
+    width: 80%;
+    margin-top: 4%;
+    margin-left: 30px;
+
+}
+
+.brainstormconclusion {
+
+
+display: block;
+width: 100%;
+height: 1200px;
+background-color: #ffffff;    
+
+
+
+}
+
+.brainstormconclusion h2 {
+
+     color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 3%;
+
+
+
+
+}
+
+
+
+
+.brainstormconclusion span {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 3%;
+    width: 350px;
+    margin-top: 3%;
+
+}
+
+.brainstormconclusion p {
+
+    display: block;
+    color: #000000;
+    font-family: "raleway-bold";
+    font-size: 16px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 3%;
+    width: 350px;
+    margin-top: 3%;  
+
+
+
+}
+
+
+.brainstormconclusion img{
+
+    width: 95%;
+    margin-left: 2%; 
+    margin-top: 3%;
+
+}
+
+
+.wp {
+
+display: block;
+width: 100%;
+height: 1050px;
+background-color: #ffffff;       
+
+}
+
+
+.wp h1 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: center;
+
+
+}
+
+.wp h2 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 18px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 3%;
+
+
+}
+
+.wp span {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 3%;
+    width: 350px;
+    margin-top: 3%;
+
+
+
+}
+
+
+.wp img {
+
+    width: 95%;
+    margin-left: 2%;
+    margin-top: 3%;
+
+}
+
+.pp {
+
+display: block;
+width: 100%;
+height: 700px;
+background-color: #ffffff;
+
+
+
+}
+
+
+
+.pp h2 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 18px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 3%;
+
+}
+
+.pp span {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 3%;
+    width: 350px;
+    margin-top: 3%;
+    float: left;
+
+
+}
+
+
+.pp img {
+
+    display: block;
+    float: left;
+    width:100%;
+    margin-left: 0%;
+    margin-top:5%;
+    margin-bottom: 15px;
+
+
+}
+
+
+.pt {
+
+    display: block;
+    width: 100%;
+    height: 2000px;
+
+    
+
+
+}
+
+.pt h1 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: center;
+
+
+}
+
+
+.pt h2 {
+
+    color: #616161;
+    font-family: "raleway-bold";
+    font-size: 18px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: left;
+    margin-left: 3%;
+
+}
+
+.pt iframe {
+
+    margin-left: 0%;
+    margin-top: 3%;
+    width:100%;
+    height:40%; 
+
+}
+
+.pt img {
+
+   
+    width: 50%;
+    margin-top: 15%;
+    margin-left: 25%;
+    margin-bottom: 3%;
+}
+
+#mock {
+
+    width: 60%;
+    margin-top: 10%;
+    margin-left: 25%;
+
+}
+
+.reflection {
+
+    display: block;
+    width: 100%;
+    height: 700px;
+    background-color: #ffffff;
+
+}
+
+.reflection h1 {
+
+   color: #616161;
+    font-family: "raleway-bold";
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 8%;
+    text-align: center;
+
+}
+
+.reflection p {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 7%;
+    width: 350px;
+    margin-top: 3%;
+    text-align: center;
+    font-style: italic;
+
+
+
+}
+
+.reflection span {
+
+    display: block;
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    margin-left: 3%;
+    width: 350px;
+    margin-top: 3%;
+    float: left;
+
+}
+
+
+
+
+/*    footer    */
+footer{
+    display: block;
+    padding: 35px 0;
+    overflow: hidden;
+    
+}
+
+footer .footer_logo{
+    float: left;
+
+}
+
+footer .rights p{
+   
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 13px;
+    margin: auto; 
+    text-align: right;
+}
+
+footer .rights p a{
+    color: #777;
+    font-family: "raleway-semibold";
+    font-size: 13px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+}
+
