--- a/work/css/blushup.css
+++ b/work/css/blushup.css
@@ -38,11 +38,12 @@
 }
 
 
-
+@media screen and (min-width:651px){
 
 /*  General CSS*/
 body{
     background: #fff;
+    max-width: 1440px;
 }
 
 .wrapper{
@@ -355,7 +356,7 @@ footer .rights p a{
     text-decoration: none;
 }
 
-
+}
 
 
 
