--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -662,7 +662,7 @@ background-color: #ffffff;
     line-height: 28px; 
     letter-spacing: .5px;
     margin-left: 17%;
-    width: 1000px;
+    width: 66%;
     margin-top: 3%;
 
 
@@ -721,7 +721,7 @@ background-color: #ffffff;
     line-height: 28px; 
     letter-spacing: .5px;
     margin-left: 17%;
-    width: 1000px;
+    width: 66%;
     margin-top: 3%;
 
 }
@@ -735,7 +735,7 @@ background-color: #ffffff;
     line-height: 28px; 
     letter-spacing: .5px;
     margin-left: 17%;
-    width: 1000px;
+    width: 66%;
     margin-top: 3%;  
 
 
@@ -795,7 +795,7 @@ background-color: #ffffff;
     line-height: 28px; 
     letter-spacing: .5px;
     margin-left: 17%;
-    width: 1000px;
+    width: 66%;
     margin-top: 3%;
 
 
@@ -962,7 +962,7 @@ background-color: #ffffff;
     line-height: 28px; 
     letter-spacing: .5px;
     margin-left: 17%;
-    width: 1000px;
+    width: 66%;
     margin-top: 3%;
     text-align: center;
     font-style: italic;
@@ -980,7 +980,7 @@ background-color: #ffffff;
     line-height: 28px; 
     letter-spacing: .5px;
     margin-left: 17%;
-    width: 1000px;
+    width: 66%;
     margin-top: 3%;
     float: left;
 
